# Tarea1

./: .gitignore  CMakeLists.txt  main.cpp  tarea_1  tarea_1.cbp
Conversiones/: Conversiones.cpp  Conversiones.h
Gráfico/: GraficoNRZI.cpp  GraficoNRZI.h
HammingCode/: Hamming.cpp  Hamming.h
Interfaz/: mainwindow.cpp  mainwindow.h  mainwindow.ui
